--- a/config.json
+++ b/config.json
@@ -2535,7 +2535,67 @@
           "apiEndpoint": ""
         }
       ],
-      "specifications": [],
+      "specifications": [
+        {
+          "sliceName": "slice: change inventory",
+          "title": "spec:  change inventory",
+          "given": [],
+          "when": [
+            {
+              "title": "Change Inventory",
+              "id": "3458764596955969401",
+              "index": 0,
+              "type": "SPEC_COMMAND",
+              "fields": [
+                {
+                  "name": "inventory",
+                  "type": "Int",
+                  "example": "",
+                  "mapping": "",
+                  "optional": false,
+                  "cardinality": "Single"
+                },
+                {
+                  "name": "productId",
+                  "type": "String",
+                  "example": "",
+                  "mapping": "",
+                  "optional": false,
+                  "cardinality": "Single"
+                }
+              ],
+              "linkedId": "3458764596395279433"
+            }
+          ],
+          "then": [
+            {
+              "title": "Inventory Changed",
+              "id": "3458764596955969402",
+              "index": 0,
+              "type": "SPEC_EVENT",
+              "fields": [
+                {
+                  "name": "inventory",
+                  "type": "Int",
+                  "example": "",
+                  "mapping": "",
+                  "optional": false,
+                  "cardinality": "Single"
+                },
+                {
+                  "name": "productId",
+                  "type": "String",
+                  "example": "",
+                  "mapping": "",
+                  "optional": false,
+                  "cardinality": "Single"
+                }
+              ],
+              "linkedId": "3458764596395403355"
+            }
+          ]
+        }
+      ],
       "actors": [
         {
           "name": "bots",
@@ -3781,9 +3841,26 @@
           "title": "spec:  clear cart",
           "given": [
             {
-              "title": "Item Added",
-              "id": "3458764595935790592",
+              "title": "Cart Created",
+              "id": "3458764596856777916",
               "index": 0,
+              "type": "SPEC_EVENT",
+              "fields": [
+                {
+                  "name": "aggregateId",
+                  "type": "UUID",
+                  "example": "",
+                  "mapping": "",
+                  "optional": false,
+                  "cardinality": "Single"
+                }
+              ],
+              "linkedId": "3458764596402400430"
+            },
+            {
+              "title": "Item Added",
+              "id": "3458764596856777917",
+              "index": 1,
               "type": "SPEC_EVENT",
               "fields": [
                 {
@@ -3841,7 +3918,7 @@
           "when": [
             {
               "title": "Clear Cart",
-              "id": "3458764595935790593",
+              "id": "3458764596856777918",
               "index": 0,
               "type": "SPEC_COMMAND",
               "fields": [
@@ -3860,7 +3937,7 @@
           "then": [
             {
               "title": "Cart Cleared",
-              "id": "3458764595935790594",
+              "id": "3458764596856777919",
               "index": 0,
               "type": "SPEC_EVENT",
               "fields": [
