--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      transaction-id-prefix: "cart"
     consumer:
       group-id: cart
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -35,6 +36,11 @@ axon:
     general: jackson
   axonserver:
     enabled: false
+  eventhandling:
+    processors:
+      publish_cart:
+        dlq:
+          enabled: true
 
 application:
   debug:
